<resources>

    <!--General-->
    <string name="app_name">QR Widget</string>

    <!--CaptureActivity-->
    <string name="initialize_widget">Choose barcode for your widget</string>
    <string name="from_gallery">From Gallery</string>
    <string name="from_saved">From Saved</string>
    <string name="gallery">Gallery</string>
    <string name="saved">Saved</string>
    <string name="failed_to_convert">Failed to convert image</string>

    <!--ListActivity-->
    <string name="barcode_is_reserved">This code is already reserved</string>
    <string name="no_barcodes">There are no barcodes added</string>
    <string name="available_items">Available Items</string>
    <string name="reserved_by_widget">Reserved by Widget</string>

    <!--EditActivity-->
    <string name="edit_and_save">Edit and Save</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="set_title">Set title</string>
    <string name="data_title">Data</string>
    <string name="title">Title</string>
    <string name="barcode_format">Format</string>
    <string name="save">Save</string>
    <string name="confirm_delete">Are you sure you want to delete barcode?</string>

    <!--AboutActivity-->
    <string name="project_info">Project Info</string>
    <string name="check_project_on">Find project on</string>
    <string name="my_name">Andrii Lytvyniuk</string>
    <string name="about_me">About Me</string>

    <!--PreviewActivity-->
    <string name="edit">Edit</string>

</resources>
