<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EditActivity">

    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_title"
            android:id="@+id/titleNotesTextView"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/titleDataTextView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
            android:hint="@string/set_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/titleEditText"
            android:textSize="@dimen/text_size_ordinary"
            tools:text="dddddddddddddd"
            android:singleLine="true"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/titleNotesTextView"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleNotesTextView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titleNotesTextView"/>

    <TextView
            android:text="@string/data_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_title"
            android:id="@+id/titleDataTextView"
            app:layout_constraintStart_toStartOf="@+id/titleFormatTextView"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/titleFormatTextView"
            app:layout_constraintTop_toBottomOf="@+id/titleNotesTextView"
            />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/dataTextView"
            android:textColorLink="@color/link_color"
            android:autoLink="web"
            android:textSize="@dimen/text_size_ordinary"
            app:layout_constraintStart_toEndOf="@+id/titleDataTextView"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleDataTextView"
            tools:text="Data"
            app:layout_constraintTop_toTopOf="@+id/titleDataTextView"/>

    <TextView
            android:text="@string/barcode_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_title"
            android:id="@+id/titleFormatTextView"
            app:layout_constraintStart_toStartOf="@+id/titleNotesTextView"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDataTextView"
            />

    <TextView
            tools:text="QR_CODE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/formatTextView"
            android:textSize="@dimen/text_size_ordinary"
            app:layout_constraintStart_toEndOf="@+id/titleFormatTextView"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/titleFormatTextView"
            app:layout_constraintTop_toTopOf="@+id/titleFormatTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>