<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CaptureActivity">

    <fragment
            android:name="alytvyniuk.com.barcodewidget.ZXingScannerFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:id="@+id/fragment"
            app:layout_constraintVertical_bias="0.0"/>

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appBarLayout">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            <ProgressBar
                    android:visibility="gone"
                    android:id="@+id/progressCircle"
                    android:layout_gravity="end"
                    android:padding="7dp"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <Button
            android:id="@+id/galleryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/from_gallery"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button"
            app:layout_constraintStart_toEndOf="@+id/savedButton"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/savedButton"
            app:layout_constraintBottom_toBottomOf="@+id/savedButton"
            app:layout_constraintVertical_bias="1.0"/>

    <Button
            android:id="@+id/savedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/from_saved"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/galleryButton"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"/>

    <TextView
            android:text="@string/initialize_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/updateWidgetTextView"
            android:textSize="@dimen/text_size_ordinary"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>