<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appBarLayout">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp">

        <TextView
                android:text="@string/about_me"
                android:gravity="center"
                android:textSize="@dimen/text_size_ordinary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:text="@string/my_name"
                android:gravity="center"
                android:textSize="@dimen/text_size_small_title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView"/>

        <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/cardView"
                app:srcCompat="@drawable/rounded_frame"
                android:background="@drawable/my_photo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
                android:layout_width="@dimen/social_icon_size"
                android:layout_height="@dimen/social_icon_size"
                app:srcCompat="@drawable/ic_linkedin"
                android:id="@+id/linkToLinkedIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toStartOf="@+id/linkToGithub"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
                android:layout_width="@dimen/social_icon_size"
                app:layout_constraintDimensionRatio="1"
                android:layout_height="0dp"
                app:srcCompat="@drawable/ic_github"
                android:id="@+id/linkToGithub"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toEndOf="@+id/linkToLinkedIn"
                app:layout_constraintTop_toTopOf="@+id/linkToLinkedIn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
            android:text="@string/check_project_on"
            android:gravity="center|bottom"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small_title"/>

    <ImageView
            android:layout_width="123dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/github"
            android:layout_marginBottom="20dp"
            android:id="@+id/linkToProject"/>
</LinearLayout>